--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ html
         link(rel="stylesheet", href="css/base.css")
     body
         h1 Hello world
+        a(href="/home") Home
         a(href="/login") 登录
         script(src="js/jquery-1.11.1.js")
         != js("demo")
