--- a/views/home.jade
+++ b/views/home.jade
@@ -1,9 +1,3 @@
-doctype html
-html
-head
-  meta(charset="utf-8")
-  title Homepage
-  link(rel="stylesheet" type="text/css" href="css/semantic.css")
-
-body#home
+extends layout
+block content
     h1.ui.blue.header This is Home
