--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,7 @@
-doctype html
-html
-    head
-        title Collaborative Todo
-        link(rel="stylesheet", href="css/base.css")
-    body
-        h1 Hello world
-        a(href="/home") Home
-        a(href="/login") 登录
-        script(src="js/jquery-1.11.1.js")
-        != js("demo")
+extends layout
+block header
+    title Index
+block content
+    h1 Hello world
+    a(href="/home") Home
+    a(href="/login") 登录
