--- a/views/login.jade
+++ b/views/login.jade
@@ -1,10 +1,10 @@
 extends layout
 block header
     title 登录
+    link(rel="stylesheet" href="css/login.css")
 block content
-    form
+    form(action="/login" method="post")
         h3 登录 
-        input#username(placeholder="用户名")
-        input#username(placeholder="密码")
-        button 登录
-
+        input#username(placeholder="用户名" name="username")
+        input#password(placeholder="密码" name="password")
+        input#login(type="submit" value="登录")
