--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,3 +1,34 @@
+body,div,ul,li,h3{
+    margin: 0;
+    padding: 0;
+}
 body{
-    background: #eee;
+    font-family: 'Open Sans', 'sans-serif','微软雅黑';
+    margin-bottom: 60px;
+    background: url('/images/brickwall.png');
+}
+ul li{
+    list-style:none;
+}
+a:link,a:visited,a:hover,a:active{
+    text-decoration:none; 
+}
+.m-b-reset{
+    margin-bottom: 0px !important;
+}
+.padding-reset{
+    padding: 0px !important;
+}
+.ui .message{
+    padding-top: 30px !important;
+    padding-bottom:  50px !important;
+}
+.m-top-10{
+    margin-top: 10px !important;
+}
+.hidden{
+    opacity: 0;
+}
+.ui .button{
+    text-transform: capitalize;
 }
