--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,4 +7,5 @@ html
     body
         block content
         script(src="js/jquery-1.11.1.js")
-        != js("demo")
+        script(src="js/avalon.js")
+        != js("index")
