--- a/views/index.jade
+++ b/views/index.jade
@@ -22,7 +22,7 @@ block content
                   h1.ui.medium.header 高效的信息发布平台
                   p
                     | 这是一个面向大学校园的信息发布平台，在这里，您可以快速发布信息，第一时间获取您想获得的资源，简单、高效,一步直达。
-                  a.ui.green.button(href="/post/new") 发布信息
+                  a.ui.green.button(href="javascript:void(0)" id="post-new-btn") 发布信息
           .ui.hidden.divider
           .ui.grid
             .two.column.row(ms-controller="posts")
@@ -34,5 +34,15 @@ block content
               .column
                 .ui.divider
                 span © Taolijie 2014
+    .ui.modal.post(ms-controller="post_new")
+        .header 发布信息
+        .content
+            form.ui.form(ms-submit="submit")
+                .ui.input
+                    input(type="text",placeholder="请输入主题，如：传单派发",ms-duplex="o.title")
+                    textarea(placeholder="请输入具体内容:",ms-duplex="o.content")
+        .actions
+            .ui.negative.black.button 取消
+            input#post-submit-btn.ui.right.button(type="submit",ms-click="submit",value="发布")
     script.
         posts = !{JSON.stringify(posts)}
