--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,4 +8,5 @@ html
         block content
         script(src="js/jquery-1.11.1.js")
         script(src="js/avalon.js")
+        script(src="js/semantic.js")
         != js("index")
