--- a/views/index.jade
+++ b/views/index.jade
@@ -12,8 +12,8 @@ block content
                 h3.ui.large.header 桃李街
             .right.menu
               a.item(href='/') 首页
-              a.item(href='/about') 关于
-              a.item(href='/help') 帮助
+              a.item(href='/login') 登录
+              a.item(href='/register') 注册
           .ui.divider
           .ui.grid
             .row
