--- a/views/index.jade
+++ b/views/index.jade
@@ -42,7 +42,7 @@ block content
                     input(type="text",placeholder="请输入主题，如：传单派发",ms-duplex="o.title")
                     textarea(placeholder="请输入具体内容:",ms-duplex="o.content")
         .actions
-            .ui.negative.black.button 取消
-            input#post-submit-btn.ui.right.button(type="submit",ms-click="submit",value="发布")
+            .ui.negative.button 取消
+            input#post-submit-btn.ui.positive.right.button(type="submit",ms-click="submit",value="发布")
     script.
         posts = !{JSON.stringify(posts)}
