--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,7 @@
 doctype html
 html
     head
+        meta(charset="utf-8")
         link(rel="stylesheet", href="css/semantic.css")
         link(rel="stylesheet", href="css/base.css")
         block header
