--- a/public/css/base.css
+++ b/public/css/base.css
@@ -32,3 +32,13 @@ a:link,a:visited,a:hover,a:active{
 .ui .button{
     text-transform: capitalize;
 }
+/*custom*/
+.menu .ui.large.header{
+    line-height: 10px;
+}
+.ui.menu:not(.vertical) .item > .button{
+    margin-right: 10px;
+}
+.row .column{
+    margin-bottom: 15px;
+}
