--- a/views/index.jade
+++ b/views/index.jade
@@ -1,48 +1,41 @@
 extends layout
 block header
-        title 桃李街 | 高效的信息发布平台
-        link(rel="stylesheet", href="css/index.css")
+    title 桃李街 | 高效的信息发布平台
+    link(rel="stylesheet", href="css/index.css")
 block content
     .page.grid
-      .ui.page.grid
         .ui.page.grid
-          nav#topnav.ui.text.menu.navbar
-            .left.menu
-              a.item(href='')
-                h3.ui.large.header 桃李街
-            .right.menu
-              a.item(href='/') 首页
-              a.item(href='/login') 登录
-              a.item(href='/register') 注册
-          .ui.divider
-          .ui.grid
-            .row
-              .column
-                .ui.huge.message.page.grid.center.aligned
-                  h1.ui.medium.header 高效的信息发布平台
-                  p
-                    | 这是一个面向大学校园的信息发布平台，在这里，您可以快速发布信息，第一时间获取您想获得的资源，简单、高效,一步直达。
-                  a.ui.green.button(href="javascript:void(0)" id="post-new-btn") 发布信息
-          .ui.hidden.divider
-          .ui.grid
-            .two.column.row(ms-controller="posts")
-              .column(ms-repeat="posts")
-                h2.ui.medium.header {{el.title}}
-                p
-                  | {{el.content}}
-            .row
-              .column
-                .ui.divider
-                span © Taolijie 2014
-    .ui.modal.post(ms-controller="post_new")
-        .header 发布信息
-        .content
-            form.ui.form(ms-submit="submit")
-                .ui.input
-                    input(type="text",placeholder="请输入主题，如：传单派发",ms-duplex="o.title")
-                    textarea(placeholder="请输入具体内容:",ms-duplex="o.content")
-        .actions
-            .ui.negative.button 取消
-            input#post-submit-btn.ui.positive.right.button(type="submit",ms-click="submit",value="发布")
+            .ui.page.grid
+                .ui.grid 
+                    .row 
+                        .column
+                            .ui.huge.message.page.grid.center.aligned
+                                h1.ui.medium.header 高效的信息发布平台
+                                p
+                                    | 这是一个面向大学校园的信息发布平台，在这里，您可以快速发布信息，第一时间获取您想获得的资源，简单、高效,一步直达。
+                                a.ui.green.button(href="javascript:void(0)" id="post-new-btn") 发布信息
+                .ui.hidden.divider
+                .ui.grid
+                  .two.column.row(ms-controller="posts")
+                    .column(ms-repeat="posts")
+                      h2.ui.medium.header {{el.title}}
+                      p
+                        | {{el.content}}
+                  .row
+                    .column
+                      .ui.divider
+                      span © Taolijie 2014
+                .ui.modal.post(ms-controller="post_new")
+                    .header 发布信息
+                    .content
+                        form.ui.form(ms-submit="submit")
+                            .ui.input
+                                input(type="text",placeholder="请输入主题，如：传单派发",ms-duplex="o.title")
+                                textarea(placeholder="请输入具体内容:",ms-duplex="o.content")
+                    .actions
+                        .ui.negative.button 取消
+                        input#post-submit-btn.ui.positive.right.button(type="submit",ms-click="submit",value="发布")
+block footer
     script.
         posts = !{JSON.stringify(posts)}
+    != js("index")
