post list and pagination

--- a/views/index.jade
+++ b/views/index.jade
@@ -21,6 +21,9 @@ block content
                       h2.ui.medium.header {{el.title}}
                       p
                         | {{el.content}}
+                  .one.column.row
+                    .column
+                        a.ui.medium.blue.button(href="/post") 查看全部
                   .row
                     .column
                       .ui.divider
