--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html
             .ui.page.grid
               nav#topnav.ui.text.menu.navbar
                 .left.menu
-                  a.item(href='')
+                  a.item(href='/')
                     h3.ui.large.header 桃李街
                 .right.menu
                   a.item(href='/') 首页
