--- a/views/home.jade
+++ b/views/home.jade
@@ -1,3 +1,6 @@
 extends layout
 block content
     h1.ui.blue.header This is Home
+block footer
+    script.
+        user = !{JSON.stringify(user)}
