--- a/views/register.jade
+++ b/views/register.jade
@@ -7,8 +7,10 @@ block content
         .three.column.row
             .column
             .column
-                form.ui.form.segment(action="/register" method="post")
+                form.ui.form.segment(action="/register" method="post",ms-controller="register")
                     .ui.header 注册 
+
+                    .ui(ms-if="err.msg") {{err.msg}}
                     .field
                         .ui.input
                             input#username(name="username", type='text', placeholder='用户名')
@@ -16,3 +18,10 @@ block content
                         .ui.input
                             input#password(name="password", type='password', placeholder='密码')
                     input#login.ui.small.blue.button(type="submit" value="注册")
+block footer
+    script.
+        user = {}
+        err = !{JSON.stringify(err)}
+        {}
+    !=js('register')
+
