--- a/views/home.jade
+++ b/views/home.jade
@@ -7,8 +7,8 @@ block content
                     .one.column.row
                         .column
                             .menu
-                                a.blue.small.header.item(href="#post") 信息
-                                a.green.small.header.item(href="#user") 用户
+                                a.blue.small.header.item(href="/admin/post") 信息
+                                a.green.small.header.item(href="/admin/user") 用户
                     .two.column.row 
                         .column
 block footer
