post management navigation

--- a/views/home.jade
+++ b/views/home.jade
@@ -4,11 +4,8 @@ block content
         .ui.page.grid
             .ui.page.grid
                 .ui.grid 
-                    .one.column.row
-                        .column
-                            .menu
+                        .five.wide.column
+                            .ui.vertical.pointing.menu
                                 a.blue.small.header.item(href="/admin/post") 信息
                                 a.green.small.header.item(href="/admin/user") 用户
-                    .two.column.row 
-                        .column
 block footer
