--- a/views/postAdmin.jade
+++ b/views/postAdmin.jade
@@ -10,10 +10,17 @@ block content
                   .one.column.row(ms-controller="posts")
                     .column
                         .ui.segment.post(ms-repeat="posts")
-                            .ui.medium.header {{el.title}}
-                            div {{el.content}}
-                                p {{el.date | date('yyyy-MM-dd HH:mm:ss')}}
-                                a(href="javascript:void(0)",ms-click="remove($remove,el)") 删除
+                            div(ms-if="!el.edit")
+                                .ui.medium.header {{el.title}}
+                                div {{el.content}}
+                                    p {{el.date | date('yyyy-MM-dd HH:mm:ss')}}
+                                    a(href="javascript:void(0)",ms-click="edit(el)") 编辑
+                                    a(href="javascript:void(0)",ms-click="remove($remove,el)") 删除
+                            div(ms-if="el.edit")
+                                input.title(ms-duplex="el.title")
+                                br
+                                textarea.content(ms-duplex="el.content")
+                                a.button(href="javascript:void(0)" ms-click="submit(el)") 保存
                   .one.column.row
                     .column
                         #page
@@ -32,4 +39,4 @@ block footer
             page_html = '<a href="?page='+i+'">第' + i + '页</a>'
             $('#page').append(page_html)
         }
-    != js("post")
+    != js("postAdmin")
