--- a/views/postAdmin.jade
+++ b/views/postAdmin.jade
@@ -1,7 +1,7 @@
 extends layout
 block header
     title 全部信息
-    link(rel="stylesheet", href="css/postAdmin.css")
+    link(rel="stylesheet", href="/css/postAdmin.css")
 block content
     .page.grid
         .ui.page.grid
@@ -12,15 +12,17 @@ block content
                         .ui.segment.post(ms-repeat="posts")
                             div(ms-if="!el.edit")
                                 .ui.medium.header {{el.title}}
+                                    span.post-category {{el.category}}
                                 div {{el.content}}
-                                    p {{el.date | date('yyyy-MM-dd HH:mm:ss')}}
-                                    a(href="javascript:void(0)",ms-click="edit(el)") 编辑
-                                    a(href="javascript:void(0)",ms-click="remove($remove,el)") 删除
+                                    p {{el.author}} {{el.date | date('yyyy-MM-dd HH:mm:ss')}}
+                                    a.ui.positive.small.button(href="javascript:void(0)",ms-click="edit(el)") 编辑
+                                    a.ui.negative.small.button(href="javascript:void(0)",ms-click="remove($remove,el)") 删除
                             div(ms-if="el.edit")
-                                input.title(ms-duplex="el.title")
+                                input.ui.input.title(ms-duplex="el.title")
                                 br
-                                textarea.content(ms-duplex="el.content")
-                                a.button(href="javascript:void(0)" ms-click="submit(el)") 保存
+                                textarea.ui.textarea.content(ms-duplex="el.content")
+                                a.ui.blue.small.button(href="javascript:void(0)" ms-click="submit(el)") 保存
+                                a.ui.small.button(href="javascript:void(0)" ms-click="cancel(el)") 取消 
                   .one.column.row
                     .column
                         #page
