--- a/public/css/postAdmin.css
+++ b/public/css/postAdmin.css
@@ -8,12 +8,12 @@
 }
 input{
     padding: 0 5px;
-    width: 300px;
+    width: 50%;
     height: 30px;
 }
 textarea{
     padding: 5px;
-    width: 600px;
+    width: 80%;
     height: 80px;
     display: block;
     margin: 15px 0;
