--- a/views/home.jade
+++ b/views/home.jade
@@ -8,4 +8,5 @@ block content
                             .ui.vertical.pointing.menu
                                 a.blue.small.header.item(href="/admin/post") 信息
                                 a.green.small.header.item(href="/admin/user") 用户
+                                a.yellow.small.header.item(href="/admin/category") 分类
 block footer
