--- a/views/post.jade
+++ b/views/post.jade
@@ -6,15 +6,19 @@ block content
     .page.grid
         .ui.page.grid
             .ui.page.grid
-                .ui.grid
-                  .two.column.row(ms-controller="posts")
-                    .column(ms-repeat="posts")
-                      h2.ui.medium.header {{el.title}}
-                      p
-                        | {{el.content}}
-                  .one.column.row
-                    .column
-                        #page
+                  .ui.grid(ms-controller="posts")
+                      .five.wide.column
+                        .ui.vertical.pointing.menu
+                            a.blue.small.header.item(href="/post") 全部
+                            a.blue.small.header.item(ms-repeat="categories" ms-href="?cid={{el.id}}") {{el.name}}
+                      .ten.wide.column
+                        .ui.segment.column(ms-repeat="posts")
+                          h2.ui.medium.header {{el.title}}
+                          p
+                            | {{el.content}}
+                        .one.column.row
+                          .column
+                            #page
                   .row
                     .column
                       .ui.divider
@@ -32,12 +36,25 @@ block content
 block footer
     script.
         posts = !{JSON.stringify(posts)}
+        categories = !{JSON.stringify(categories)}
         pagination = !{JSON.stringify(pagination)}
         count = pagination.count
         page = pagination.page
         pages = pagination.pages
+        var link = '';
+        if (location.href.indexOf('?') > 1)
+            link = location.href + '&';
         for(i=1;i<=pages;i++){
-            page_html = '<a href="/post?page='+i+'">第' + i + '页</a>'
+            pos = link.indexOf('page');
+            if (pos>-1){
+                link = link.substring(0,(pos+5));
+                page_html = '<a href="'+link+i+'">第' + i + '页</a>';
+                console.log(page_html)
+            }
+            else if(link.indexOf('&') > -1)
+                    page_html = '<a href="'+link+'page='+i+'">第' + i + '页</a>';
+                else
+                    page_html = '<a href="'+link+'?page='+i+'">第' + i + '页</a>';
             $('#page').append(page_html)
         }
     != js("post")
