--- a/views/postAdmin.jade
+++ b/views/postAdmin.jade
@@ -12,13 +12,16 @@ block content
                         .ui.segment.post(ms-repeat="posts")
                             div(ms-if="!el.edit")
                                 .ui.medium.header {{el.title}}
-                                    span.post-category {{el.category}}
+                                    span.post-category {{getCate(el.category)}}
                                 div {{el.content}}
                                     p {{el.author}} {{el.date | date('yyyy-MM-dd HH:mm:ss')}}
                                     a.ui.positive.small.button(href="javascript:void(0)",ms-click="edit(el)") 编辑
                                     a.ui.negative.small.button(href="javascript:void(0)",ms-click="remove($remove,el)") 删除
                             div(ms-if="el.edit")
                                 input.ui.input.title(ms-duplex="el.title")
+                                label 分类:
+                                select(ms-each-option="options" ms-duplex="el.category" id="category")
+                                    option(ms-value="option.id") {{option.name}}
                                 br
                                 textarea.ui.textarea.content(ms-duplex="el.content")
                                 a.ui.blue.small.button(href="javascript:void(0)" ms-click="submit(el)") 保存
@@ -33,6 +36,7 @@ block content
 block footer
     script.
         posts = !{JSON.stringify(posts)}
+        categories = !{JSON.stringify(categories)}
         pagination = !{JSON.stringify(pagination)}
         count = pagination.count
         page = pagination.page
