--- a/views/postAdmin.jade
+++ b/views/postAdmin.jade
@@ -1,7 +1,7 @@
 extends layout
 block header
     title 全部信息
-    link(rel="stylesheet", href="/css/postAdmin.css")
+    link(rel="stylesheet", href="/css/index.css")
 block content
     .page.grid
         .ui.page.grid
