--- a/views/register.jade
+++ b/views/register.jade
@@ -1,6 +1,7 @@
 extends layout
 block header
     title 注册
+    link(rel="stylesheet", href="css/index.css")
 block content
     .ui.grid
         .row
