--- a/views/userAdmin.jade
+++ b/views/userAdmin.jade
@@ -1,7 +1,7 @@
 extends layout
 block header
     title 全部用户
-    link(rel="stylesheet", href="/css/postAdmin.css")
+    link(rel="stylesheet", href="/css/index.css")
 block content
     .page.grid
         .ui.modal.user(ms-controller="users_new")
