--- a/views/home.jade
+++ b/views/home.jade
@@ -1,4 +1,7 @@
 extends layout
+block header
+    title 桃李街 | 高效的信息发布平台
+    link(rel="stylesheet", href="/css/index.css")
 block content
     .page.grid
         .ui.page.grid
