--- a/views/login.jade
+++ b/views/login.jade
@@ -1,7 +1,7 @@
 extends layout
 block header
     title 登录
-    link(rel="stylesheet" href="css/login.css")
+    link(rel="stylesheet" href="css/index.css")
 block content
     .ui.grid
         .row
