--- a/views/index.jade
+++ b/views/index.jade
@@ -18,14 +18,14 @@ block content
                 p 你的喜好我知道！给我你的信任，还你一份真诚。给我你的期待，还你一份满意。
     .row.fourline
         .bigbutton
-            .jianzhi
-                a(href="/") 校园兼职
-            .jiaoyou 
+            .smallbtn.jianzhi
+                a(href="/post") 校园兼职
+            .smallbtn.jiaoyou 
                 a(href="/") 恋爱交友
-            .ershou 
+            .smallbtn.smallbtn.ershou 
                 a(href="/") 二手物品
-            .binguan 
+            .smallbtn.binguan 
                 a(href="/") 宾馆预订
-            .tougao 
+            .smallbtn.tougao 
                 a(href="/") 发布信息
 block footer
