--- a/views/categoryAdmin.jade
+++ b/views/categoryAdmin.jade
@@ -10,6 +10,12 @@ block content
                 form.ui.form
                     .ui.input
                         input(type="text",placeholder="请输入分类名称",ms-duplex="o.name")
+                    .ui.input
+                        select(ms-duplex="cateClass")
+                            option(value="1") 作为一级分类
+                                each cate,i in categories
+                                    if(cate.cateClass == "1")
+                                        option(value="#{cate.id}") ┕#{cate.name}
                     .actions
                         .ui.negative.button 取消
                         .ui.positive.right.button(type="submit",ms-click="submit") 添加
@@ -23,8 +29,11 @@ block content
                             div(ms-if="!el.edit")
                                 .ui.medium.header {{el.name}}
                                 div
+                                    a.ui.blue.small.button(href="javascript:void(0)",ms-click="showCateLast(el)") 显示子栏目
                                     a.ui.positive.small.button(href="javascript:void(0)",ms-click="edit(el)") 编辑
                                     a.ui.negative.small.button(href="javascript:void(0)",ms-click="remove($remove,el)") 删除
+                                div(ms-duplex="show")
+                                    p {{show}}
                             div(ms-if="el.edit")
                                 input.ui.input.title(ms-duplex="el.name")
                                 br
@@ -36,6 +45,12 @@ block content
                     .column
                       .ui.divider
                       span © Taolijie 2014
+        
+        each cateFirst,i in categories
+            if(cateFirst.cateClass=="1")
+                p V#{cateFirst.name}
+            else
+                p #{cateFirst.name}
 block footer
     script.
         categories = !{JSON.stringify(categories)}
